--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@ title: HOME
 custom_css: index.css
 ---
 
-        <div class="intro">
-            <p class="quote">
-                “This is a quote.”
-            </p>
-            <p class="reference">
-                ~ <b>Reference</b>, <i>Date/Year</i>
-            </p>
-        </div>
+<div class="intro">
+    <p class="quote"></p>
+    <p class="reference"></p>
+</div>
